Prevent atl text overflow at not loaded images (badges and others ListingCard) #746

--- a/app/source/css/components/ListingCard.styl
+++ b/app/source/css/components/ListingCard.styl
@@ -16,9 +16,11 @@ ListingCard() {
             border-bottom: none;
             width: 5%;
             img {
-                padding: 0em;  
+                padding: 0em;
                 height: 3em;
                 margin-right: 0.5em;
+                overflow: hidden;
+                display: inline-block;
             }
         }
         .Card-title {
